--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
     width: 80%;
     text-align: center;
     border-radius: 20%;
-    
 }
 
 p{
@@ -16,10 +15,17 @@ h1{
 }
 
 @media screen and (max-width: 760px) {
+    #main{
+        width: 90%;
+    }
     h1{
-        font-size: 20px;
+        font-size: 25px;
     }
     p{
         font-size: 16px;
+    }
+    img{
+        width: 90%;
+        height: 90%;
     }
 }
