--- a/css/qna.css
+++ b/css/qna.css
@@ -6,7 +6,7 @@
     background-color: whitesmoke;
     text-align: center;
     border-radius: 20px;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     width: 80%;
 }
@@ -48,4 +48,19 @@
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7caca', endColorstr='#ff5c5c', GradientType=0);
     /* IE6-9 */
+}
+
+
+@media screen and (max-width: 760px) {
+    .qBox{
+        font-size: 18px;
+        width: 90%;
+    }
+    .answerList{
+        font-size: 16px;
+        width: 90%;
+    }
+    .status{
+        width: 90%;
+    }
 }
